[package]
name = "dashsdk"
version = "0.1.0"
edition = "2021"

[dependencies]

dash-sdk = { path = "../../WebstormProjects/platform/packages/rs-sdk" }
drive = { path = "../../WebstormProjects/platform/packages/rs-drive" }
http = "0.2.12"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
