[package]
name = "dashsdk"
version = "0.1.0"
edition = "2021"

[dependencies]

dpp = { path = "../platform/packages/rs-dpp" , features = ["state-transition-signing"]}
dash-sdk = { path = "../platform/packages/rs-sdk" }
drive = { path = "../platform/packages/rs-drive" }
http = "0.2.12"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.89"
getrandom = "0.2.15"
simple-signer = { path = "../platform/packages/simple-signer" }
hex = "0.4.3"
bytes = "1.7.2"
